--- a/styles/myzarrinpal.css
+++ b/styles/myzarrinpal.css
@@ -112,7 +112,7 @@
   height: 530px;
 }
 .zarinpal .zarinpal-left .zarinpal-left__baner {
-  background: url("/images/instantPayout-new.png") no-repeat;
+  background: url("../images/instantPayout-new.png") no-repeat;
   width: 100%;
   height: 100%;
   background-size: cover;
